--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,28 @@
+# Virtualenv
+env
+.Python
+include
+lib
+
+# Python Packages
+*.egg
+*.egg-info
+bin
+build
+dist
+sdist
+eggs
+env
+parts
+var
+develop-eggs
+.installed.cfg
+
+# Pip Installer Log
+pip-log.txt
+
+# Dev
 *.sublime*
+
+# Ins
 gist.txt
