--- a/app.cfg
+++ b/app.cfg
@@ -2,3 +2,7 @@ SQLALCHEMY_DATABASE_URI = 'sqlite:////tmp/test.db'
 SQLALCHEMY_ECHO = False
 SECRET_KEY = 'fjdsalfvcxjylkvjcxylkvjlxykcjlksadjfas'
 DEBUG = True
+LANGUAGES = {
+    'en': 'English',
+    'de': 'Deutsch'
+}
