Added signup process

--- a/app.cfg
+++ b/app.cfg
@@ -1,4 +1,4 @@
-SQLALCHEMY_DATABASE_URI = 'sqlite:////tmp/test.db'
+SQLALCHEMY_DATABASE_URI = 'sqlite:///app.sql'
 SQLALCHEMY_ECHO = False
 SECRET_KEY = 'fjdsalfvcxjylkvjcxylkvjlxykcjlksadjfas'
 DEBUG = True
@@ -6,3 +6,4 @@ LANGUAGES = {
     'en': 'English',
     'de': 'Deutsch'
 }
+TRAP_BAD_REQUEST_ERRORS = True
