Added login view, update credentials and created sendgrid account

--- a/app.cfg
+++ b/app.cfg
@@ -7,3 +7,13 @@ LANGUAGES = {
     'de': 'Deutsch'
 }
 TRAP_BAD_REQUEST_ERRORS = True
+
+DOMAIN = 'https://powerful-headland-9151.herokuapp.com/'
+
+MAIL_SERVER = 'smtp.sendgrid.net'
+MAIL_PORT = 587
+MAIL_USE_TLS = True
+MAIL_USE_SSL = False
+MAIL_USERNAME = 'betterapp@ahmet.com'
+MAIL_PASSWORD = 'KpX2uQmHntSrwy6xRZ7R'
+DEFAULT_MAIL_SENDER = 'noreply@betterapp.com'
