Changed DB config to use the database from another application

--- a/app.cfg
+++ b/app.cfg
@@ -1,5 +1,6 @@
 SQLALCHEMY_ECHO = False
 SECRET_KEY = 'fjdsalfvcxjylkvjcxylkvjlxykcjlksadjfas'
+SQLALCHEMY_DATABASE_URI = 'postgres://hsjdhiskzxewmn:b7Xv7-pY5Rmc1YdAdYyuJeibyb@ec2-54-217-202-108.eu-west-1.compute.amazonaws.com:5432/daibcc7gbeg0a8'
 DEBUG = True
 LANGUAGES = {
     'en': 'English',
