Changed db config

--- a/app.cfg
+++ b/app.cfg
@@ -1,6 +1,8 @@
 SQLALCHEMY_ECHO = False
 SECRET_KEY = 'fjdsalfvcxjylkvjcxylkvjlxykcjlksadjfas'
-SQLALCHEMY_DATABASE_URI = 'postgres://hsjdhiskzxewmn:b7Xv7-pY5Rmc1YdAdYyuJeibyb@ec2-54-217-202-108.eu-west-1.compute.amazonaws.com:5432/daibcc7gbeg0a8'
+#SQLALCHEMY_DATABASE_URI = 'postgres://hsjdhiskzxewmn:b7Xv7-pY5Rmc1YdAdYyuJeibyb@ec2-54-217-202-108.eu-west-1.compute.amazonaws.com:5432/daibcc7gbeg0a8'
+#SQLALCHEMY_DATABASE_URI = 'postgres://jsczjflnghcipg:9RpCrWlxq8XY_OA3Kgc5ifMYct@ec2-107-21-114-132.compute-1.amazonaws.com:5432/dc8e9sndeph41b'
+
 DEBUG = True
 LANGUAGES = {
     'en': 'English',
