reconfigured app.config to use new db and new app

--- a/app.cfg
+++ b/app.cfg
@@ -1,6 +1,6 @@
 SQLALCHEMY_ECHO = False
 SECRET_KEY = 'fjdsalfvcxjylkvjcxylkvjlxykcjlksadjfas'
-SQLALCHEMY_DATABASE_URI = 'postgres://hsjdhiskzxewmn:b7Xv7-pY5Rmc1YdAdYyuJeibyb@ec2-54-217-202-108.eu-west-1.compute.amazonaws.com:5432/daibcc7gbeg0a8'
+SQLALCHEMY_DATABASE_URI = 'postgres://emrrdmdujorcoc:aYuEJmgc4pKqbnuYWt-zJFQ2XC@ec2-54-83-58-191.compute-1.amazonaws.com:5432/desenkf8dq589j'
 
 DEBUG = True
 LANGUAGES = {
@@ -9,12 +9,13 @@ LANGUAGES = {
 }
 TRAP_BAD_REQUEST_ERRORS = True
 
-DOMAIN = 'https://powerful-headland-9151.herokuapp.com/'
+DOMAIN = 'https://bet-bettr-pro.herokuapp.com/'
+
 
 MAIL_SERVER = 'smtp.sendgrid.net'
 MAIL_PORT = 587
 MAIL_USE_TLS = True
 MAIL_USE_SSL = False
-MAIL_USERNAME = 'betterapp@ahmet.com'
-MAIL_PASSWORD = 'KpX2uQmHntSrwy6xRZ7R'
+MAIL_USERNAME = 'app40566457@heroku.com'
+MAIL_PASSWORD = '7ea1ttwm9983'
 DEFAULT_MAIL_SENDER = 'noreply@betterapp.com'
